    should open panel context menu instead.
* System critical temperature level in 'thermal' plugin now is properly
    ignored if manual levels are active.
* Fixed click on 'menu' plugin, only image was clickable, not whole area.
* Added API panel_config_int_button_new() for generic plugin config spin
    button with custom range, not just generic 0...1000.

0.7.2
-------------------------------------------------------------------------
* Fixed unhiding panel if it becomes empty and height_when_hidden is 0.
* Fixed invalid X protocol word size: despite of stating it 32 bit, the X
    server uses unsigned long which is 64 bit on 64-bit architectures.
* Adapted to use libmenu-cache >= 1.0.0 - it could show empty folders in
    the desktop menu.
* Fixed crash in taskbar after visible task changed name then gone.
* Ensured panel background update after some plugin was resized.
* FileManager statement from old config should never be scanned again.
* Fixed positioning of new created panel, the edge was not saved.
* Eliminated hardcoded "xterm" in 'volumealsa' plugin - LibFM has enough
    means to call terminal when needed.
* Fixed crash if 'volumealsa' plugin initialization failed.

0.7.1
-------------------------------------------------------------------------
* Fixed search for the gtkrc file.
* Fixed search path for configuration - it should be not compilation time
    path but paths using $XDG_CONFIG_DIRS.
* Fixed incorrect flag for 'launchbar' plugin which marks him expandable.
* Fixed dragging of task buttons.
* Corrected using $XDG_MENU_PREFIX to work the same way as libfm does.
* Fixed using font description, font in gtkrc file was ignored.
* Improved search for hw sensors in /sys/class/hwmon/ hierarchy.
* Improved check for critical temperatures in 'termal' plugin, now each
    individual hardware setting (if available) is also taken into
    consideration.
* Fixed parsing alias name in 'weather' plugin settings.